<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".postJobsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/work_information"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_work_place"
        android:id="@+id/work_place"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/enter_work_type"
        android:id="@+id/work_Type"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/shift_time"
        android:gravity="center"
        android:id="@+id/work_shift"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:hint="@string/enter_employer_phone"
        android:id="@+id/work_employer"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/post_now"
        android:gravity="center"
        android:background="@drawable/buttons"
        android:id="@+id/work_posting"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>



</LinearLayout>